--- a/src/app/user/create/create.component.html
+++ b/src/app/user/create/create.component.html
@@ -5,7 +5,10 @@
             <input type="text" placeholder="first name" formControlName="fname">
             <input type="text" placeholder="last name" formControlName="lname">
             <input type="number" placeholder="age" formControlName="age">
-            <button (click)="addUser();">Create User</button>
+            <button class="smallButton" (click)="addUser();">Create User</button>
         </form>
+    </div>
+    <div align="center">
+        <button class="smallButton" (click) = "goToLogin();">Login</button>
     </div>
 </html>
